--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,10 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/inventario']">Inventario</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/nosotros']">Sobre Nosotros</a>
+          </li>
         </ul>
       </div>
       <div class="navbar-nav ml-auto">
