--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="hero-text">
       <h1 class="display-4">Los mejores Vinos</h1>
       <p class="lead">Calidad Premium</p>
-      <a href="#" class="btn btn-primary btn-lg">Ver Productos</a>
+      <a href="#" class="btn btn-primary btn-lg" [routerLink]="['/productos']">Ver Productos</a>
     </div>
   </div>
 </div>
