--- a/src/app/inventario/inventario.component.html
+++ b/src/app/inventario/inventario.component.html
@@ -1,4 +1,4 @@
-
+<div class="container mt-4">
   <h2 class="inventory-title text-center mb-4">Inventario de Productos</h2>
   
   @if (productos.length > 0) {
@@ -35,4 +35,4 @@
   } @else {
     <p>No hay productos disponibles.</p>
   }
-</div>
+</div> <!-- Cierre correspondiente a la apertura de la clase "container mt-4" -->
