--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,6 +17,9 @@
             <a class="nav-link" [routerLink]="['/productos']" routerLinkActive="router-link-active">Productos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/nosotros']" routerLinkActive="router-link-active">Nosotros</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" [routerLink]="['/inventario']" routerLinkActive="router-link-active">Inventario</a>
           </li>
           <li class="nav-item dropdown">
