--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -29,11 +29,6 @@ header .navbar {
     margin-right: 0;
   }
   
-  .navbar-nav.ml-auto {
-    display: flex;
-    flex-direction: row;
-  }
-
   
 .dropdown-menu {
   background-color: #2c2c2c; /* Fondo negro para el menú desplegable */
@@ -84,4 +79,54 @@ header .navbar {
 
 .btn-remove:hover {
   background-color: #c82333;
+}
+
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 300px;
+  text-align: center;
+}
+
+
+.btn-elegant-outline {
+  margin-left: 15px;
+  color: #6c757d;
+  border-color: #6c757d;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: rgba(108, 117, 125, 0.1);
+    border-color: #555f66;
+  }
+}
+
+.btn-premium-outline {
+  color: #8B0000; 
+  border-color: #8B0000;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: rgba(139, 0, 0, 0.1);
+    color: darken(#8B0000, 10%);
+  }
+}
+
+.user-greeting {
+  text-transform: capitalize;
 }
