--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
             <li class="nav-item">
               <a class="nav-link" [routerLink]="['/inventario']">Inventario</a>
             </li>
-          }          
+          }
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/nosotros']">Sobre Nosotros</a>
           </li>
@@ -34,19 +34,28 @@
                 Bienvenido, {{ usuario.nombre }}
               </span>
             </div>
-            <button 
-              class="btn btn-elegant-outline btn-logout" 
+            <!-- Icono del carrito -->
+            <button class="btn-carrito" (click)="toggleCarrito()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="9" cy="21" r="1"></circle>
+                <circle cx="20" cy="21" r="1"></circle>
+                <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+              </svg>
+              Carrito ({{ carrito.length }}) <!-- Mostrar cantidad de productos en el carrito -->
+            </button>
+            <button
+              class="btn btn-elegant-outline btn-logout"
               (click)="logout()"
-            >
+              >
               <i class="fas fa-sign-out-alt mr-2"></i>
               Cerrar sesión
             </button>
           </div>
         } @else {
-          <button 
-            class="btn btn-premium-outline" 
+          <button
+            class="btn btn-premium-outline"
             (click)="mostrarLogin = true"
-          >
+            >
             <i class="fas fa-user-lock mr-2"></i>
             Acceder
           </button>
@@ -55,6 +64,23 @@
     </div>
   </nav>
 </header>
+
+<!-- Mostrar carrito -->
+@if (carritoVisible) {
+  <div class="cart-details">
+    <h3>Carrito</h3>
+    <ul>
+      @for (producto of carrito; track producto) {
+        <li>
+          {{ producto.Nombre }} - {{ producto.cantidad }} x ${{ producto.Precio }}
+        </li>
+      }
+    </ul>
+    <div class="cart-total">
+      <p>Total: ${{ totalCarrito }}</p>
+    </div>
+  </div>
+}
 
 <!-- Modal de Login -->
 @if (mostrarLogin) {
