--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -69,6 +69,7 @@
                   </div>
                 </div>
                 <p class="wine-description">{{ producto.Descripcion }}</p>
+                <p>Descuento: {{ producto.Precio_Con_Descuento }}</p>
                 <!-- Botones -->
                 <div class="wine-actions">
                   <button class="btn-add-cart" (click)="agregarAlCarrito(producto)">
