--- a/src/app/inventario/inventario.component.html
+++ b/src/app/inventario/inventario.component.html
@@ -49,7 +49,7 @@
 <!-- Modal para agregar un producto -->
 <div class="modal fade" id="agregarProductoModal" tabindex="-1" aria-labelledby="agregarProductoModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content2">
+    <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="agregarProductoModalLabel">Agregar Nuevo Producto</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
